--- a/index.htm
+++ b/index.htm
@@ -1,33 +1,94 @@
-<html>
-<head>
-<meta charset="UTF-8">
-</head>
-<body>
-<center>
-<div id="head">
-<table width="1000"border="0"cellpadding="0"cellpadding="0">
-<tr>
-<td><img src="title.jpg"width="1000"height="200"></td>
-</tr>
+<!DOCTYPE html>
+<html lang="tw">
+     <head>
+        <meta charset="utf-8">
+        <title>林亞婷的文創空間</title>
+        <meta name="description"content="聯大文創" >
+        <link rel="stylesheet"href='style.css'>
+    </head>
+     <body>
+ <header>
+<h1>林亞婷的文創空間</h1>
+<nav class='navigation'>
+<ul>
+<li><a href='#frofile'>自我介紹</a></li>
+<li><a href='#concert'>個人作品</a></li>
+<li><a href='book.htm'target="_blank">我收集的圖書</a></li>
+<li><a href='project.htm'target="_blank">歷年專案計畫</a></li>
+<li><a href='form.htm'target="_blank">表單設計</a></li>
+<li><a href='https://ccdm.nuu.edu.tw/'target="_blank">文創系</a></li>
+<li><a href='https://www.nuu.edu.tw/'target="_blank">聯合大學</a></li>
+</ul>
+</nav>
+</header>
+<main>
+        <div class="mainvisual">
+        <img src="011.jpg" alt='主視覺圖片'width='740'height='340'>
+        </div>
 
-<tr>
-<td align="center">國立聯合大學文創系林亞婷的作品集</td>
-</tr>
+        <article id='profile'>
+        <div class='inner'>
+       <h2>自我介紹</h2>
+       <p>大家好!我叫林亞婷,平時喜歡聽音樂,看電影,看書,閒暇時間會做手工藝,希望能成為一位多才多藝的人!</p>
+        </div>
+        </article>
+       
+         <article id='concert'>
+          <h2>個人作品</h2>
+        <p>簡歷/作品</p>
+         <section>
+         <h3>個人簡歷</h3>
+          <table>
+                         <tr><th>現職</th><td>聯合大學</td></tr>
+                         <tr><th>學歷</th><td>北門高中</td></tr>
+                         <tr><th>興趣</th><td>手工藝</td></tr>
+                         <tr><th>愛好</th><td>做手帳.蒐集迪士尼周邊</td></tr>
+          </table>
+           </section>
 
-</table>
-</div>
+	 <section> 
+	<h3>作品</h3>
+                <section class="performer">
+		<img src="01.jpg" width='150'height='150'>
+		<h3>橡皮章</h3>
+		<p>美少女戰士</p> 
+		</section>
+<section class="performer">
+		<img src="02.jpg" width='150'height='150'>
+		<h3>熱縮片</h3>
+		<p>鈴蘭別針</p> 
+		</section>
+<section class="performer">
+		<img src="03.jpg" width='150'height='150'>
+		<h3>口金包</h3>
+		<p>神奈川沖浪裏</p> 
+		</section>
+<section class="performer">
+		<img src="04.jpg" width='150'height='150'>
+		<h3>羊毛氈</h3>
+		<p>甜甜圈小貓</p> 
+		</section>
+<section>
+<h3>特殊經歷</h3>
+<ol>
+<li>榕園文藝營手工藝工作坊一日講師
+<li>京都奈口金包創業訪談
+<li>療育紙雕盆栽工作坊
+<li>鹽分地帶文學研習
 
-<div id="nav1"><br>
-<table width="1000" border="0" cellpadding="0" cellspacing="1" bgcolor="#999999">
-<tr>
-<td align="left" bgcolor="#ffffff"><a href="index.htm">作品集</a>　＞　
-<a href="index.htm">電繪作品</a>　＞　
-Photoshop作品
+</ol>
+</section>
 
-</td>
-</tr>
-</table>
-</div>
+	
 
-</body>
+ </article>
+
+
+
+</main>
+<footer>
+<p class='pagtop'><a href='#top'>回到頁首</a></p>
+<p class='copyright'><small>&copy;coopyRight2020文創系</small></p>
+</footer>
+   </body>
 </html>
